Initial commit before switching to Role entity

--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
-    "java.configuration.enableAnnotationProcessing": true
+    "java.configuration.enableAnnotationProcessing": true,
+    "java.compile.nullAnalysis.mode": "automatic"
 }
