--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.516.0",
     "next": "latest",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
@@ -41,13 +42,14 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19",
-    "react": "^19.1.0",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
